--- a/app/src/main/res/layout/activity_produccion.xml
+++ b/app/src/main/res/layout/activity_produccion.xml
@@ -488,7 +488,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_margin="5dp"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:visibility="gone">
 
                 <TextView
                     android:layout_width="match_parent"
