--- a/app/src/main/res/layout/dialog_cancelar_motivo.xml
+++ b/app/src/main/res/layout/dialog_cancelar_motivo.xml
@@ -67,7 +67,7 @@
             android:layout_marginEnd="16dp"
             android:ems="10"
             android:gravity="start|top"
-            android:inputType="textMultiLine"
+            android:inputType="text"
             android:textColor="#F8F1F1"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
