--- a/app/src/main/res/layout/dialog_fin_trabajo.xml
+++ b/app/src/main/res/layout/dialog_fin_trabajo.xml
@@ -52,7 +52,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
-            android:text="Detalle del trabajo"
+            android:text="Observaciones"
             android:textColor="@color/white"
             android:textSize="16sp"
             android:textStyle="bold"
