--- a/app/src/main/res/layout/dialog_scrap.xml
+++ b/app/src/main/res/layout/dialog_scrap.xml
@@ -38,7 +38,7 @@
             android:layout_marginTop="16dp"
             android:layout_marginEnd="32dp"
             android:text="Nombre Variable"
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="24sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
