--- a/app/src/main/res/layout/item_note_produccion.xml
+++ b/app/src/main/res/layout/item_note_produccion.xml
@@ -37,6 +37,7 @@
 
 
             <LinearLayout
+                android:id="@+id/linearlayoutbacground"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="3"
@@ -65,7 +66,7 @@
                         android:layout_height="match_parent"
                         android:layout_gravity="center_vertical"
                         android:layout_weight="1"
-                        android:text="RUBACH"
+                        android:text="Usuario"
                         android:textAlignment="viewStart"
                         android:textColor="@color/white"
                         android:textSize="16sp" />
