--- a/app/src/main/res/layout/activity_bobina.xml
+++ b/app/src/main/res/layout/activity_bobina.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/constrain_bobina"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="#C900ACC1"
+    android:layout_height="match_parent"
+    android:background="#C987E7F3"
     tools:context=".activitys.Bobina_Activity">
 
     <TextView
@@ -13,8 +13,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+
         android:text="CARGAR BOBINA"
-        android:textColor="@color/black"
+        android:textAlignment="center"
         android:textSize="28sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -23,12 +24,10 @@
 
     <LinearLayout
         android:id="@+id/linearLayout2"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="16dp"
         android:orientation="horizontal"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView5">
 
         <LinearLayout
@@ -44,7 +43,6 @@
                 android:id="@+id/lyb_ProveedorNombre"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-
                 android:layout_weight="1"
                 android:orientation="horizontal">
 
@@ -57,13 +55,17 @@
                     android:textSize="20sp"
                     android:textStyle="bold" />
 
+
                 <Spinner
                     android:id="@+id/dialogbobina_spi_ProveedorNombre"
                     android:layout_width="match_parent"
                     android:layout_height="48dp"
                     android:layout_weight="2"
+                    android:dropDownWidth="wrap_content"
+                    android:dropDownSelector="@color/black"
                     android:entries="@array/material"
-                    tools:ignore="TouchTargetSizeCheck" />
+                    android:popupBackground="@color/teal_700"
+                    android:spinnerDropDownItemStyle="@style/MySpinnerItemStyle" />
             </LinearLayout>
 
             <LinearLayout
@@ -212,7 +214,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="48dp"
                     android:layout_weight="2"
+                    android:dropDownSelector="@color/black"
                     android:entries="@array/ABIERTAOCERRADA"
+                    android:popupBackground="@color/teal_700"
                     android:visibility="visible"
                     tools:ignore="TouchTargetSizeCheck" />
 
@@ -337,13 +341,14 @@
         android:id="@+id/bobina_btn_cancelar"
         android:layout_width="250dp"
         android:layout_height="60dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="36dp"
         android:background="@drawable/fondo"
         android:text="Cancelar"
         android:textColor="@color/white"
         android:textSize="14sp"
         android:textStyle="bold"
+        app:layout_constraintEnd_toStartOf="@+id/bobina_btn_guardar"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
 
@@ -351,13 +356,15 @@
         android:id="@+id/bobina_btn_guardar"
         android:layout_width="250dp"
         android:layout_height="60dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="24dp"
+        android:layout_marginTop="36dp"
         android:background="@drawable/fondo"
         android:text="Guardar"
         android:textColor="@color/white"
         android:textSize="14sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/bobina_btn_cancelar"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
