--- a/app/src/main/res/layout/activity_produccion.xml
+++ b/app/src/main/res/layout/activity_produccion.xml
@@ -43,7 +43,11 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
-        android:scrollbarStyle="outsideInset"
+        android:fadeScrollbars="false"
+        android:scrollbarSize="15dp"
+        android:scrollbarThumbVertical="@color/design_default_color_primary"
+        android:scrollbarTrackVertical="@color/design_default_color_secondary"
+
         app:layout_constraintBottom_toTopOf="@+id/produccion_btn_cancelar"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView15">
@@ -51,6 +55,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:paddingRight="16dp"
             android:orientation="vertical">
 
             <LinearLayout
@@ -351,11 +356,10 @@
 
                 <TextView
                     android:id="@+id/produccion_txt_Observaciones"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:inputType="textPersonName"
-                    android:text="obser"
+                    android:text="obser pruebas de observaciones con mucho texto para validar que se esta expandiendo"
                     android:textSize="14sp"
                     tools:ignore="TouchTargetSizeCheck" />
             </LinearLayout>
