--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -19,4 +19,11 @@
         <item name="windowNoTitle">true</item>
 
     </style>
+
+    <style name="MySpinnerItemStyle" parent="@android:style/Widget.TextView">
+        <item name="android:textColor">#000000</item>
+        <item name="android:background">#61C0EC</item>
+        <item name="android:padding">8dp</item>
+    </style>
+
 </resources>
