--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -14,19 +14,27 @@
         <!-- Customize your theme here. -->
     </style>
 
-
     <style name="Theme.ProduccionTablet.NoActionBar" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
-    </style>
-
-    <style name="CustomDialogStyle" parent="@android:style/Theme.Dialog">
-        <item name="android:background">#F1EAEA</item>
-        <item name="android:textColor">#088D9E</item>
     </style>
 
 
     <style name="Theme.ProduccionTablet.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="Theme.ProduccionTablet.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
+    <style name="MySpinnerItemStyle" parent="@android:style/Widget.TextView">
+        <item name="android:textColor">#000000</item>
+        <item name="android:background">#61C0EC</item>
+        <item name="android:padding">8dp</item>
+        <item name="android:dropDownItemStyle">@style/MySpinnerDropDownItemStyle</item>
+    </style>
+
+    <style name="MySpinnerDropDownItemStyle" parent="android:Widget.DropDownItem.Spinner">
+        <item name="android:textColor">#000000</item>
+        <item name="android:background">#61C0EC</item>
+        <item name="android:padding">8dp</item>
+    </style>
+
 </resources>
