--- a/app/src/main/res/layout/activity_inicio_sesion.xml
+++ b/app/src/main/res/layout/activity_inicio_sesion.xml
@@ -39,7 +39,6 @@
         android:autoText="true"
         android:inputType="text|textCapWords"
         android:selectAllOnFocus="true"
-        android:text="rubach"
         app:layout_constraintEnd_toStartOf="@+id/login_btn_IniciarSesion"
         tools:layout_editor_absoluteY="89dp" />
 
@@ -49,10 +48,9 @@
         android:layout_width="400dp"
         android:layout_height="70dp"
         android:ems="10"
-        android:inputType="textPassword"
+        android:inputType="number|textPassword|phone"
         android:minHeight="48dp"
         android:selectAllOnFocus="true"
-        android:text="1234567"
         android:textSize="34sp"
         app:layout_constraintEnd_toEndOf="@+id/login_edt_login"
         app:layout_constraintStart_toStartOf="@+id/login_edt_login"
@@ -60,7 +58,7 @@
 
     <TextView
         android:id="@+id/login_txt_nombreimprenta"
-        android:layout_width="189dp"
+        android:layout_width="wrap_content"
         android:layout_height="45dp"
         android:layout_marginStart="16dp"
         android:background="@color/teal_700"
