--- a/app/src/main/res/layout/item_note_tareas.xml
+++ b/app/src/main/res/layout/item_note_tareas.xml
@@ -29,7 +29,7 @@
         android:layout_marginRight="5dp"
         android:layout_marginBottom="5dp"
         android:layout_weight="1"
-        android:background="#5EA5E4"
+        android:background="#176AAC"
         android:orientation="vertical">
 
         <LinearLayout
