--- a/app/src/main/res/layout/dialog_fin_turno.xml
+++ b/app/src/main/res/layout/dialog_fin_turno.xml
@@ -18,16 +18,14 @@
 
         <Button
             android:id="@+id/cierre_btn_findeturnosinterminar"
-            android:layout_width="600dp"
+            android:layout_width="300dp"
             android:layout_height="100dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
-            android:layout_marginEnd="16dp"
             android:backgroundTint="#BC3E35"
             android:text="TRABAJO QUEDO INCOMPLETO"
             android:textSize="20sp"
             app:icon="@android:drawable/ic_menu_info_details"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/edit_motivo" />
 
@@ -75,7 +73,7 @@
 
         <Button
             android:id="@+id/cierre_btn_findeturnoterminado"
-            android:layout_width="600dp"
+            android:layout_width="300dp"
             android:layout_height="100dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
@@ -87,8 +85,8 @@
             app:icon="@android:drawable/ic_menu_info_details"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/cierre_btn_findeturnosinterminar" />
+            app:layout_constraintStart_toEndOf="@+id/cierre_btn_findeturnosinterminar"
+            app:layout_constraintTop_toBottomOf="@+id/edit_motivo" />
 
         <Button
             android:id="@+id/cierre_btn_cancelar"
