--- a/app/src/main/res/layout/item_note_bobina.xml
+++ b/app/src/main/res/layout/item_note_bobina.xml
@@ -28,7 +28,7 @@
         android:layout_marginRight="5dp"
         android:layout_marginBottom="5dp"
         android:layout_weight="1"
-        android:background="#267ABD"
+        android:background="#176AAC"
         android:orientation="vertical">
 
         <LinearLayout
