--- a/app/src/main/res/layout/activity_inicio_sesion.xml
+++ b/app/src/main/res/layout/activity_inicio_sesion.xml
@@ -37,7 +37,7 @@
         android:layout_height="70dp"
         android:layout_marginEnd="16dp"
         android:autoText="true"
-        android:inputType="text|textCapWords"
+        android:inputType="text"
         android:selectAllOnFocus="true"
         app:layout_constraintEnd_toStartOf="@+id/login_btn_IniciarSesion"
         tools:layout_editor_absoluteY="89dp" />
