--- a/app/src/main/res/layout/activity_produccion.xml
+++ b/app/src/main/res/layout/activity_produccion.xml
@@ -14,12 +14,12 @@
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="16dp"
         android:background="@drawable/fondo"
-        android:backgroundTint="#D38A1E"
-        android:text="FIN DE TURNO"
+        android:backgroundTint="#399F3D"
+        android:text="FIN DE TRABAJO"
         android:textColor="@color/white"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/produccion_btn_finalziar" />
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <Button
         android:id="@+id/produccion_btn_verpdf"
@@ -712,24 +712,10 @@
         android:layout_marginTop="6dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/produccion_btn_finalziar"
+        app:layout_constraintBottom_toTopOf="@+id/produccion_btn_finalziar2"
         app:layout_constraintEnd_toStartOf="@+id/linearLayout5"
         app:layout_constraintStart_toEndOf="@+id/scrollView2"
         app:layout_constraintTop_toBottomOf="@+id/textView29" />
-
-    <Button
-        android:id="@+id/produccion_btn_finalziar"
-        android:layout_width="250dp"
-        android:layout_height="60dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginBottom="16dp"
-        android:background="@drawable/fondo"
-        android:backgroundTint="#118C16"
-        android:text="FIN DE TRABAJO"
-        android:textColor="@color/white"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
 
     <Button
         android:id="@+id/produccion_btn_cancelar"
