--- a/app/src/main/res/layout/activity_bobina.xml
+++ b/app/src/main/res/layout/activity_bobina.xml
@@ -15,7 +15,7 @@
         android:background="#009688"
         android:padding="5dp"
 
-        android:text="CARGAR BOBINA"
+        android:text="CARGAR LOTE"
         android:textAlignment="center"
         android:textColor="#F6F4F4"
         android:textSize="28sp"
@@ -40,7 +40,8 @@
             android:id="@+id/linearLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1.5"
+            android:layout_weight="1
+"
             android:orientation="vertical">
 
             <LinearLayout
@@ -118,18 +119,14 @@
                     android:textStyle="bold" />
 
                 <EditText
-                    android:id="@+id/dialogbobina_edt_Lote"
+                    android:id="@+id/edt_lote_"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="2"
                     android:ems="10"
+                    android:hint="cargar lote"
+                    android:inputType="textPersonName" />
 
-                    android:hint="Numero de Lote"
-                    android:inputType="text|textCapCharacters"
-                    android:selectAllOnFocus="true"
-                    android:textAllCaps="true"
-                    android:textSize="24sp"
-                    tools:ignore="TouchTargetSizeCheck" />
             </LinearLayout>
 
             <LinearLayout
@@ -178,7 +175,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="4"
-                    android:text="Defectuos a Kg"
+                    android:text="Kilos de bobina"
                     android:textSize="20sp"
                     android:textStyle="bold" />
 
