--- a/app/src/main/res/layout/activity_produccion.xml
+++ b/app/src/main/res/layout/activity_produccion.xml
@@ -526,6 +526,7 @@
                 android:orientation="horizontal">
 
                 <TextView
+                    android:id="@+id/txt_ppistas"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="2"
@@ -614,7 +615,7 @@
             android:layout_height="60dp"
             android:layout_marginTop="8dp"
             android:backgroundTint="#267ABD"
-            android:text="Cargar Bobina"
+            android:text="Cargar Lote"
             android:textColor="@color/white"
             android:textSize="12sp"
             app:icon="@drawable/ic_agregar"
@@ -744,7 +745,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="Lista Bobinas"
+        android:text="Lista de Lotes"
         app:layout_constraintStart_toStartOf="@+id/produccion_bobina_recycler"
         app:layout_constraintTop_toBottomOf="@+id/produccion_cantidad_recycler" />
 
