--- a/app/src/main/res/layout/activity_verificacion.xml
+++ b/app/src/main/res/layout/activity_verificacion.xml
@@ -504,6 +504,7 @@
                 android:orientation="horizontal">
 
                 <TextView
+                    android:id="@+id/txt_ppistas"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1.8"
