--- a/app/src/main/res/layout/activity_verificacion.xml
+++ b/app/src/main/res/layout/activity_verificacion.xml
@@ -1045,9 +1045,10 @@
                 android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:digits="0123456789,"
                 android:ems="10"
                 android:inputType="number"
-                android:maxLength="2"
+                android:maxLength="5"
                 android:minHeight="48dp"
                 android:numeric="integer"
                 android:selectAllOnFocus="true"
