31/07/2023 se hizo filtro en inicio de sesion

--- a/app/src/main/res/layout/dialog_fin_turno.xml
+++ b/app/src/main/res/layout/dialog_fin_turno.xml
@@ -23,7 +23,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
-            android:backgroundTint="#348037"
+            android:backgroundTint="#A66D18"
             android:text="TRABAJO QUEDO INCOMPLETO"
             android:textSize="20sp"
             app:icon="@android:drawable/ic_menu_info_details"
@@ -81,7 +81,7 @@
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="32dp"
-            android:backgroundTint="#B56E06"
+            android:backgroundTint="#268746"
             android:text="TRABAJO QUEDO TERMINADO"
             android:textSize="20sp"
             app:icon="@android:drawable/ic_menu_info_details"
