--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -25,15 +25,15 @@
     <style name="Theme.ProduccionTablet.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
     <style name="MySpinnerItemStyle" parent="@android:style/Widget.TextView">
-        <item name="android:textColor">#000000</item>
-        <item name="android:background">#61C0EC</item>
+        <item name="android:textColor">#FDF7F7</item>
+        <item name="android:background">#4F89A5</item>
         <item name="android:padding">8dp</item>
         <item name="android:dropDownItemStyle">@style/MySpinnerDropDownItemStyle</item>
     </style>
 
     <style name="MySpinnerDropDownItemStyle" parent="android:Widget.DropDownItem.Spinner">
-        <item name="android:textColor">#000000</item>
-        <item name="android:background">#61C0EC</item>
+        <item name="android:textColor">#FBF8F8</item>
+        <item name="android:background">#528DA8</item>
         <item name="android:padding">8dp</item>
     </style>
 
